--- a/index.html
+++ b/index.html
@@ -3,20 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Мой первый блог</title>
+    <link rel="stylesheet"href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-<div>
+<div class="container">
     <h1>Мой первый блог</h1>
     <div>
-        <div>
-            <h3>Заголовок 1</h3>
+        <div class="article">
+            <h3>Фондовые индексы РФ растут, несмотря на продление санкций ЕС</h3>
             <em>Опубликованно: 2017-01-24</em>
-            <p>Статья</p>
+            <p>МОСКВА, 22 июня. /ТАСС/. Российские биржевые индексы в первой половине торгов на Московской бирже растут:
+                индекс ММВБ (MICEX) поднялся на 0,56% до 1672,37 пункта, а РТС dырос на 1,64% до 982,72 пункта.
+                Пока положительное влияние на динамику ключевых индексов оказывает начало активной фазы дивидендного сезона,
+                что стимулирует инвесторов удерживать бумаги, по крайней мере, до дивидендной отсечки, отмечает аналитик
+                Промсвязьбанка Илья Фролов. "Отскок цен на нефть от внутридневных минимумов пятницы, а также наблюдаемый сегодня
+                утром рост на азиатских площадках задают слабо положительный вектор динамике индекса ММВБ на старте торгов",
+                - добавляет эксперт. Сегодня в ходе торгов на бирже ICE в Лондоне стоимость фьючерса на нефть марки Brent
+                с поставкой в августе выросла на 0,73% до 63,48 доллара за баррель. При этом рост российских фондовых индексов
+                происходит несмотря на продление санкций ЕС против РФ еще на полгода.
+                Так, совет ЕС на уровне глав МИД продлил срок действия экономических санкции в отношении России на 6 месяцев</p>
         </div>
-        <div>
-            <h3>Заголовок 2</h3>
+        <div class="article">
+            <h3>Трофеи великих битв</h3>
             <em>Опубликованно: 2017-01-23</em>
-            <p>Статья</p>
+            <p>22 июня 1943 года, спустя два года после начала Великой Отчественной войны, в ЦПКиО им. Горького в Москве
+                открылась за пять лет ее существования на трофейные автомобили, авиация, артиллерия, пришли посмотреть
+                более 7,5 млн человек. Спустя два года после начала Великой Отчественной войны, в ЦПКиО им. Горького
+                в Москве открылась выставка захваченного у Германии оружия.</p>
         </div>
     </div>
     <footer>
